Button alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -741,6 +741,11 @@ h2 {
   max-width: 100%;
   max-height: 100%; }
 
+@media only screen and (min-width: 36.5em) {
+  .our-process__section {
+    max-width: 80vw;
+    margin: auto; } }
+
 .our-process__section h2 {
   font-size: 3rem;
   text-align: left;
