--- a/sass/pages/our-process.scss
+++ b/sass/pages/our-process.scss
@@ -1,5 +1,10 @@
 .our-process {
         &__section { 
+            @include respond(tablet) {
+                max-width: 80vw;
+                margin: auto;
+            }
+
             h2 { 
                 font-size: 3rem;
                 text-align: left;
@@ -147,77 +152,77 @@
                 }
             }
         }
+        
         .section-dropdown {
-            position: absolute;
-            padding: 5px;
-            background-color: #111;
-            top: 70px;
-            left: 0;
-            width: 100%;
-            border-radius: 4px;
-            display: block;
-            box-shadow: 0 14px 35px 0 rgba(9,9,12,0.4);
-            z-index: 2;
-            opacity: 0;
-            pointer-events: none;
-            transform: translateY(20px);
-            transition: all 200ms linear;
-            &:before {
                 position: absolute;
-                top: -20px;
+                padding: 5px;
+                background-color: #111;
+                top: 70px;
                 left: 0;
                 width: 100%;
-                height: 20px;
-                content: '';
+                border-radius: 4px;
                 display: block;
-                z-index: 1;
-            }
-            &:after {
-                position: absolute;
-                top: -7px;
-                left: 30px;
-                width: 0;
-                height: 0;
-                border-left: 8px solid transparent;
-                border-right: 8px solid transparent;
-                border-bottom: 8px solid #111;
-                content: '';
-                display: block;
+                box-shadow: 0 14px 35px 0 rgba(9,9,12,0.4);
                 z-index: 2;
+                opacity: 0;
+                pointer-events: none;
+                transform: translateY(20px);
                 transition: all 200ms linear;
+                &:before {
+                    position: absolute;
+                    top: -20px;
+                    left: 0;
+                    width: 100%;
+                    height: 20px;
+                    content: '';
+                    display: block;
+                    z-index: 1;
+                }
+                &:after {
+                    position: absolute;
+                    top: -7px;
+                    left: 30px;
+                    width: 0;
+                    height: 0;
+                    border-left: 8px solid transparent;
+                    border-right: 8px solid transparent;
+                    border-bottom: 8px solid #111;
+                    content: '';
+                    display: block;
+                    z-index: 2;
+                    transition: all 200ms linear;
+                }
+            }
+            a {
+                position: relative;
+                color: #fff;
+                transition: all 200ms linear;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 500;
+                font-size: 15px;
+                border-radius: 2px;
+                padding: 5px 0;
+                padding-left: 20px;
+                padding-right: 15px;
+                margin: 2px 0;
+                text-align: left;
+                text-decoration: none;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-align-items: center;
+                -moz-align-items: center;
+                -ms-align-items: center;
+                align-items: center;
+                justify-content: space-between;
+                -ms-flex-pack: distribute;
+                &:hover {
+                    color: #102770;
+                    background-color: #ffeba7;
+                }
+                .uil {
+                    font-size: 22px;
+                }
             }
         }
-        a {
-            position: relative;
-            color: #fff;
-            transition: all 200ms linear;
-            font-family: 'Roboto', sans-serif;
-            font-weight: 500;
-            font-size: 15px;
-            border-radius: 2px;
-            padding: 5px 0;
-            padding-left: 20px;
-            padding-right: 15px;
-            margin: 2px 0;
-            text-align: left;
-            text-decoration: none;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-align-items: center;
-            -moz-align-items: center;
-            -ms-align-items: center;
-            align-items: center;
-            justify-content: space-between;
-            -ms-flex-pack: distribute;
-            &:hover {
-                color: #102770;
-                background-color: #ffeba7;
-            }
-            .uil {
-                font-size: 22px;
-            }
-        }
-        }
-        
     }
 }
